  to the `<updateLog>` element in `solrconfig.xml`, which has long been silently ignored, will now be
  respected (Michael Gibney, David Smiley)

* SOLR-17255: Fix bugs in SolrParams.toLocalParamsString() (hossman)

* SOLR-17333: Rate-limiting feature: fix live-update of config (Michael Gibney)

* SOLR-17367: Restore the use of -params option to PostTool. (Bostoi via Eric Pugh)

Dependency Upgrades
---------------------
(No changes)
* SOLR-17325: Upgrade Lucene to 9.11.1 (hossman)

Other Changes
---------------------
* SOLR-17248: Refactor ZK related SolrCli tools to separate SolrZkClient and CloudSolrClient instantiation/usage (Lamine Idjeraoui via Eric Pugh)

* SOLR-16505: Use Jetty HTTP2 for index replication and other "recovery" operations
  (Sanjay Dutt, David Smiley)

* GITHUB#2454: Refactor preparePutOrPost method in HttpJdkSolrClient (Andy Webb)

* SOLR-16503: Use Jetty HTTP2 for SyncStrategy and PeerSyncWithLeader for "recovery" operations (Sanjay Dutt, David Smiley)

* SOLR-16796: Include cyclonedx SBOMs with maven artifacts (Arnout Engelen, Houston Putman, Kevin Risden)

* SOLR-17321: Remove Deprecated URL and replace it with URI in Preparation for Java 21 (Sanjay Dutt, David Smiley, Uwe Schindler)

* PR#2524: QueryResult refactoring so that it's only returned from SolrIndexSearcher instead of
  being provided to it.  Deprecated APIs in 9x; should be removed later. (David Smiley)

* SOLR-17347: EnvUtils: Removed "env" methods, as they were problematic.  Code should almost never
  refer to env vars.  (David Smiley)

==================  9.6.1 ==================
Bug Fixes
---------------------
* SOLR-17261: Remove unintended timeout of 60 seconds for core loading. (Houston Putman)

* SOLR-17049: Actually mark all replicas down at startup and truly wait for them.
  This includes replicas that might not exist anymore locally. (Houston Putman, Vincent Primault)

* SOLR-17263: Fix 'Illegal character in query' exception in HttpJdkSolrClient (Andy Webb)
